RESOLVED FIXED84153
[EFL] Missing keycode translation for space key
https://bugs.webkit.org/show_bug.cgi?id=84153
Summary [EFL] Missing keycode translation for space key
Sudarsana Nagineni (babu)
Reported 2012-04-17 08:11:25 PDT
Map 'space' key to Unicode value to fix the issue of simulating space as a click on the button element.
Attachments
patch (3.79 KB, patch)
2012-04-18 08:32 PDT, Sudarsana Nagineni (babu)
no flags
Patch (3.86 KB, patch)
2012-04-19 12:45 PDT, Sudarsana Nagineni (babu)
no flags
Patch (4.26 KB, patch)
2012-04-19 17:34 PDT, Sudarsana Nagineni (babu)
no flags
patch (4.36 KB, patch)
2012-04-19 21:02 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-04-18 08:32:18 PDT
Created attachment 137701 [details] patch Add keycode translation for space key
WebKit Review Bot
Comment 2 2012-04-19 11:57:12 PDT
Comment on attachment 137701 [details] patch Rejecting attachment 137701 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: FAILED -- saving rejects to file LayoutTests/platform/efl/Skipped.rej patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/platform/efl/EflKeyboardUtilities.cpp patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/efl/EventSender.cpp Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Antonio Go..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output: http://queues.webkit.org/results/12455008
Sudarsana Nagineni (babu)
Comment 3 2012-04-19 12:45:36 PDT
Created attachment 137953 [details] Patch rebased
Raphael Kubo da Costa (:rakuco)
Comment 4 2012-04-19 13:31:41 PDT
Comment on attachment 137953 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=137953&action=review > Tools/DumpRenderTree/efl/EventSender.cpp:410 > + return "space"; If you use "Space" it'll be recognized by windowsKeyCodeForEvasKeyName too.
Sudarsana Nagineni (babu)
Comment 5 2012-04-19 16:41:30 PDT
(In reply to comment #4) > (From update of attachment 137953 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=137953&action=review > > > Tools/DumpRenderTree/efl/EventSender.cpp:410 > > + return "space"; > > If you use "Space" it'll be recognized by windowsKeyCodeForEvasKeyName too. It should be 'space', and not 'Space'. I checked with EWebLauncher and we get keyname as 'space' from the platform when we press space key.
Eric Seidel (no email)
Comment 6 2012-04-19 16:52:47 PDT
Comment on attachment 137701 [details] patch Cleared Antonio Gomes's review+ from obsolete attachment 137701 [details] so that this bug does not appear in http://webkit.org/pending-commit.
Sudarsana Nagineni (babu)
Comment 7 2012-04-19 17:34:57 PDT
Created attachment 138015 [details] Patch fix WindowsKeyMap for space key.
Raphael Kubo da Costa (:rakuco)
Comment 8 2012-04-19 19:14:40 PDT
(In reply to comment #5) > (In reply to comment #4) > > (From update of attachment 137953 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=137953&action=review > > > > > Tools/DumpRenderTree/efl/EventSender.cpp:410 > > > + return "space"; > > > > If you use "Space" it'll be recognized by windowsKeyCodeForEvasKeyName too. > > It should be 'space', and not 'Space'. I checked with EWebLauncher and we get keyname as 'space' from the platform when we press space key. You are right. The name is obtained via XKeysymToString, so it's "space".
Raphael Kubo da Costa (:rakuco)
Comment 9 2012-04-19 19:16:10 PDT
Comment on attachment 138015 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=138015&action=review Looks fine now, please update a patch with the proper reviewer name in the ChangeLogs so it can be cq+ed. > Source/WebCore/ChangeLog:13 > + * platform/efl/EflKeyboardUtilities.cpp: Please update the ChangeLog and mention what you fixed in createWindowsKeyMap().
Sudarsana Nagineni (babu)
Comment 10 2012-04-19 21:02:39 PDT
Created attachment 138038 [details] patch fix changelog.
WebKit Review Bot
Comment 11 2012-04-19 23:58:30 PDT
Comment on attachment 138038 [details] patch Clearing flags on attachment: 138038 Committed r114721: <http://trac.webkit.org/changeset/114721>
WebKit Review Bot
Comment 12 2012-04-19 23:58:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.