[EFL] Missing keycode translation for space key https://bugs.webkit.org/show_bug.cgi?id=84153

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-04-19
Reviewed by Antonio Gomes.

Source/WebCore:

Map space key to Unicode value in createKeyMap(), and also set
correct keyname 'space' for space key in createWindowsKeyMap().

Tests: fast/html/details-keyboard-show-hide.html
       fast/forms/button-spacebar-click.html

* platform/efl/EflKeyboardUtilities.cpp:
(WebCore::createKeyMap):

Tools:

Set keyname for space key before dispatching event.

* DumpRenderTree/efl/EventSender.cpp:
(keyNameFromJSValue):

LayoutTests:

Unskip tests connected with space key.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/101917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114721 268f45cc-cd09-0410-ab3c-d52691b4dbfc